src/objects/Login_History__c.object
<CustomObject>
    <description>Stores successful and failed login attempts for Salesforce production organization and enabled portals.</description>
    <fields>
        <fullName>API_Type__c</fullName>
        <label>API Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <label>API Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Version__c</fullName>
        <label>Client Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Time__c</fullName>
        <label>Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login_Type__c</fullName>
        <label>Login Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_URL__c</fullName>
        <label>Login URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_IP__c</fullName>
        <label>Source IP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Salesforce Username</description>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Login History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Login History Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>